--- a/config.ini
+++ b/config.ini
@@ -5,10 +5,10 @@
 
 ; APP_ID and API_HASH for telethon: https://my.telegram.org/auth
 api_id = 10066094
-api_hash = f0d1cadb8fa45f8380a342e1a702b50d
+api_hash = enter_your_hash_here 
 
 ; BOT_TOKEN: Write on telegram to @BotFather and follow the instruction
-bot_token = 6742249609:AAFTL-bDMzrgjdnO0989m5KTPxf5wEJgUOE
+bot_token = enter_your_bot_token_here
 
 ; Check the inside the config.inc.php file
 hostname = 127.0.0.1
