--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@
 ; Editable Fields:
 
 ; APP_ID and API_HASH for telethon: https://my.telegram.org/auth
-api_id = 10066094
+api_id = enter_your_api_id_here 
 api_hash = enter_your_hash_here 
 
 ; BOT_TOKEN: Write on telegram to @BotFather and follow the instruction
